# voocommerce

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  res.txt
accounts/: admin.py  email_send.py  forms.py  manager.py  models.py  signals.py  tokens.py  urls.py
accounts/api_endpoints/: __init__.py
accounts/api_endpoints/CartItemCreate/: __init__.py  serializers.py  views.py
accounts/api_endpoints/CartItemDelete/: __init__.py  views.py
accounts/api_endpoints/CartItemUpdate/: __init__.py  serializers.py  views.py
accounts/api_endpoints/CartItemsList/: __init__.py  serializers.py  views.py
accounts/api_endpoints/LoginSession/: __init__.py  views.py
accounts/api_endpoints/LogoutSession/: __init__.py  views.py
accounts/api_endpoints/Profile/: __init__.py
accounts/api_endpoints/Register/: __init__.py  serializers.py  views.py
accounts/api_endpoints/SaveProduct/: __init__.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py  0002_cart_cartitem.py  0003_alter_cartitem_cart.py  0004_user_is_confirmed_alter_cartitem_cart.py  0005_alter_cart_user.py  0006_user_saved_products.py  0007_alter_user_options.py
accounts/template_views/: __init__.py  login.py  profile.py  register.py
common/: choices.py  context_processors.py  models.py  urls.py  views.py
common/api_endpoints/: __init__.py
common/migrations/: 0001_initial.py
core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/settings/: base.py  test.py
orders/: admin.py  choices.py  models.py  urls.py
orders/api_endpoints/: __init__.py
orders/migrations/: 0001_initial.py
payments/: admin.py  choices.py  models.py  urls.py
payments/api_endpoints/: __init__.py
payments/migrations/: 0001_initial.py
payments/tests/: woopay_perform_transaction_test.py
products/: admin.py  constants.py  models.py  signals.py  tasks.py  tests.py  translation.py  urls.py  utils.py
products/api_endpoints/: __init__.py
products/migrations/: 0001_initial.py  0002_rename_category_id_product_category.py  0003_category_image.py  0004_comment_review.py  0005_alter_comment_parent_alter_comment_product_and_more.py  0006_product_description_en_product_description_ru_and_more.py
templates/: base.html  index.html  profile.html  reset_password_email.html  shoping-cart.html
(+109 files in other folders)
